packages/graphql/tests/snapshots/graphql_test____test_context_wrapped_test_create_product_mutation.snap
---
source: packages/graphql/tests/graphql_test.rs
expression: response
---
{
  "data": {
    "createProduct": {
      "product": {
        "id": "[uuid]",
        "creatorId": "00000000-3000-0000-0000-000000000000",
        "name": "Product Name"
      }
    }
  }
}
