packages/graphql/tests/snapshots/graphql_test____test_context_wrapped_test_start_mutation.snap
---
source: packages/graphql/tests/graphql_test.rs
expression: response
---
{
  "data": {
    "start": {
      "show": {
        "id": "[uuid]",
        "started": true
      }
    }
  }
}
